Mistakes have been corrected

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <!-- HEADER -->
     <header class="header">
+      <span class="header__rectangle"></span>
       <div class="header__container container">
         <!-- NAVBAR -->
         <nav class="sitenav">
@@ -26,6 +27,17 @@
                   height="8"
                 />
               </a>
+              <ul class="sitenav__item_inner-list">
+                <li class="sitenav__item_inner-item">
+                  <a class="sitenav__item_inner-link" href="#">Short</a>
+                </li>
+                <li class="sitenav__item_inner-item">
+                  <a class="sitenav__item_inner-link" href="#">Long</a>
+                </li>
+                <li class="sitenav__item_inner-item">
+                  <a class="sitenav__item_inner-link" href="#">Wide</a>
+                </li>
+              </ul>
             </li>
             <li class="sitenav__item">
               <a class="sitenav__link" href="#">Style Quiz</a>
@@ -42,6 +54,14 @@
                   width="10"
                   height="8"
               /></a>
+              <ul class="sitenav__item_inner-list">
+                <li class="sitenav__item_inner-item">
+                  <a class="sitenav__item_inner-link" href="#">Design</a>
+                </li>
+                <li class="sitenav__item_inner-item">
+                  <a class="sitenav__item_inner-link" href="#">Design</a>
+                </li>
+              </ul>
             </li>
           </ul>
         </nav>
@@ -92,6 +112,7 @@
                 width="30"
                 height="30"
               />
+              <span class="header__icons_img-ico">0</span>
             </a>
           </li>
         </ul>
@@ -283,8 +304,8 @@
                 ./images/jpg/design-story@2x.jpg 2x
               "
               alt="Kinnmoments image"
-              width="320"
-              height="320"
+              width="300"
+              height="300"
             />
             <img
               class="kinnmoments__img"
@@ -294,8 +315,8 @@
                 ./images/jpg/kinn-moments-2@2x.jpg 2x
               "
               alt="Kinnmoments image"
-              width="320"
-              height="320"
+              width="300"
+              height="300"
             />
             <img
               class="kinnmoments__img"
@@ -305,8 +326,8 @@
                 ./images/jpg/kinn-moments-3@2x.jpg 2x
               "
               alt="Kinnmoments image"
-              width="320"
-              height="320"
+              width="300"
+              height="300"
             />
             <img
               class="kinnmoments__img"
@@ -316,8 +337,8 @@
                 ./images/jpg/your-time@2x.jpg 2x
               "
               alt="Kinnmoments image"
-              width="320"
-              height="320"
+              width="300"
+              height="300"
             />
           </div>
         </div>
